// ../wire-tests/src/commonTest/proto/java/external_message.proto
package squareup.protos.simple;

option java_package = "com.squareup.wire.protos.simple";

message ExternalMessage {
  optional float f = 1 [default = 20];

  extensions 100 to 200;
}
